--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -4041,19 +4041,19 @@
         "import librosa\n",
         "import IPython.display as ipd\n",
         "\n",
-        "# 定义 RAVDESS 和自定义数据集路径\n",
+        "# RAVDESS 和自定义数据集路径\n",
         "ravdess_path = '/content/drive/MyDrive/Audio Data/Actor_*/*.wav'\n",
         "my_voice_path = '/content/drive/MyDrive/Audio Data/Actor_25/*.wav'\n",
         "\n",
-        "# 获取文件列表\n",
+        "# 获取文件\n",
         "ravdess_files = glob(ravdess_path, recursive=True)\n",
         "my_voice_files = glob(my_voice_path, recursive=True)\n",
         "\n",
-        "# 打印文件数以验证\n",
+        "# 測試文件\n",
         "print(f\"RAVDESS: {len(ravdess_files)}\")\n",
         "print(f\"My: {len(my_voice_files)}\")\n",
         "\n",
-        "# 合并两个数据集的文件列表\n",
+        "# 合并两个数据集\n",
         "all_files = ravdess_files + my_voice_files\n",
         "file_path = my_voice_files[0]\n",
         "audio_data, sample_rate = librosa.load(file_path)\n",
@@ -4066,7 +4066,7 @@
         "plt.ylabel('Amplitude')\n",
         "plt.show()\n",
         "\n",
-        "\n",
+        "# 測試製作光譜質心分析聲波\n",
         "def compute_spectral_centroid(file_path):\n",
         "    audio_data, sample_rate = librosa.load(file_path)\n",
         "    spectral_centroids = librosa.feature.spectral_centroid(y=audio_data, sr=sample_rate)[0]\n",
@@ -4115,6 +4115,7 @@
         "    'Time (s)': my_voice_t,\n",
         "    'My Data Spectral Centroid': my_voice_centroids\n",
         "})\n",
+        "# 測試結束\n",
         "\n",
         "\n",
         "#性別\n",
@@ -4128,7 +4129,7 @@
         "    plt.figure(figsize=(8, 8))\n",
         "    plt.pie(sizes, labels=labels, autopct='%1.1f%%', startangle=45, colors=['lightblue', 'lightpink'])\n",
         "    plt.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
-        "    plt.title('Gender Balance in the Dataset')\n",
+        "    plt.title('Gender Balance in Dataset')\n",
         "    plt.show()\n",
         "\n",
         "# 性别平衡分析\n",
@@ -4140,7 +4141,7 @@
         "                    'angry': 0, 'fearful': 0, 'disgust': 0, 'surprised': 0}\n",
         "\n",
         "    for file in files:\n",
-        "        # 获取情感编号（假设情感编码在文件名中）\n",
+        "        # 获取情感编号\n",
         "        file_base = os.path.basename(file)\n",
         "        emotion_code = file_base.split('-')[2]\n",
         "        if emotion_code in emotions:\n",
@@ -4153,7 +4154,7 @@
         "    plt.bar(emotions_list, counts, color='lightblue')\n",
         "    plt.xlabel('Emotion Categories')\n",
         "    plt.ylabel('Number of Samples')\n",
-        "    plt.title('Emotion Category Balance in the Dataset')\n",
+        "    plt.title('Emotion Category Balance in Dataset')\n",
         "    plt.xticks(rotation=45)\n",
         "    plt.show()\n",
         "\n",
@@ -4169,7 +4170,7 @@
           "height": 1000
         }
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
